Improvements and additions.
